css/style.css
/* ... */
    .top-banner__inner .top-banner__text p {
      margin-bottom: 42px;
      color: #777; }
      @media (max-width: 768px) {
        .top-banner__inner .top-banner__text p {
          margin-bottom: 25px;
          font-size: 14px; } }
  .top-banner__inner .top-banner__h2 {
    font-size: 74px;
    letter-spacing: 3px;
    color: #fff;
    font-family: "Calisto-MT-Bold"; }
    @media (max-width: 1250px) {
      .top-banner__inner .top-banner__h2 {
        font-size: 50px; } }
    @media (max-width: 768px) {
      .top-banner__inner .top-banner__h2 {
        font-size: 35px; } }
  .top-banner__inner .top-banner__text-up .top-banner__h2 {
    margin-top: 15px; }
    @media (max-width: 768px) {
      .top-banner__inner .top-banner__text-up .top-banner__h2 {
        margin-top: 0; } }
  .top-banner__inner .top-banner__text-down {
    margin-bottom: 20px;
    padding-left: 27%; }
    .top-banner__inner .top-banner__text-down .top-banner__h2 {
      margin-bottom: 10px; }
      @media (max-width: 768px) {
        .top-banner__inner .top-banner__text-down .top-banner__h2 {
          margin-bottom: 0; } }
  .top-banner__inner .top-banner__image {
    font-size: 0; }
    @media (max-width: 1250px) {
      .top-banner__inner .top-banner__image {
        width: 50%; }
        .top-banner__inner .top-banner__image img {
          width: 100%; } }
    @media (max-width: 520px) {
      .top-banner__inner .top-banner__image {
        width: 65%;
        margin-bottom: 20px; } }
  @media (max-width: 520px) {
    .top-banner__inner {
      flex-direction: column; } }

.brand-span {
  font-size: 14px;
  color: #c18f59; }

.brand-button {
  display: inline-block;
  padding: 10px 20px;
  font-size: 11px;
  text-transform: uppercase;
  text-decoration: none;
  color: #c18f59;
  border: 1px solid #fff;
  transition: 0.3s ease; }
  .brand-button:hover, .brand-button:focus {
    color: #777; }

.fh5co-about-me {
  position: relative;
  margin: 193px 0 199px; }
  @media (max-width: 1250px) {
    .fh5co-about-me {
      margin: 150px 0; } }
  @media (max-width: 992px) {
    .fh5co-about-me {
      margin: 125px 0; } }

.about-me-bckg {
  position: absolute;
  background-image: url("../images/about-me-bckg.jpg");
  background-position: center;
  background-size: cover;
  height: 500px;
  top: -75px;
  right: 0;
  height: calc(100% + 150px);
  width: 70%;
  z-index: -1; }
  .about-me-bckg:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #000;
    opacity: 0.7; }
  @media (max-width: 992px) {
    .about-me-bckg {
      width: 100%;
      padding-bottom: 15px; } }

.about-me-inner {
  display: flex;
  justify-content: space-between; }
  @media (max-width: 992px) {
    .about-me-inner {
      flex-direction: column;
      align-items: center; } }

.about-me-slider {
  position: relative; }
  .about-me-slider .slick-arrow {
    position: absolute;
    bottom: -18%; }
  .about-me-slider .slick-prev {
    left: 40%; }
    @media (max-width: 520px) {
      .about-me-slider .slick-prev {
        left: 34%; } }
  .about-me-slider .slick-next {
    right: 40%; }
    @media (max-width: 520px) {
      .about-me-slider .slick-next {
        right: 34%; } }

.span-arrow {
  padding: 10px 15px;
  cursor: pointer;
  color: #c18f59;
  border: 1px solid #c18f59;
  border-radius: 50%;
  transition: 0.3s ease; }
  .span-arrow:hover {
    color: #fff;
    border-color: #fff; }

.portfolio-wrapper {
  width: 390px;
  padding: 8px;
  text-align: center;
  background-color: #fff; }
  .portfolio-wrapper .portfolio__img {
    font-size: 0; }
    .portfolio-wrapper .portfolio__img img {
      width: 100%; }
  .portfolio-wrapper .portfolio__bottom {
    padding: 35px 0 95px;
    background-color: #f5f5f5; }
    @media (max-width: 992px) {
      .portfolio-wrapper .portfolio__bottom {
        padding: 25px 0; } }
  .portfolio-wrapper .portfolio__name {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    margin-bottom: 23px; }
    @media (max-width: 992px) {
      .portfolio-wrapper .portfolio__name {
        margin-bottom: 10px; } }
    .portfolio-wrapper .portfolio__name span {
      font-size: 90px;
      line-height: 75px;
      color: #c18f59;
      font-family: "Calisto-MT-Bold"; }
      @media (max-width: 992px) {
        .portfolio-wrapper .portfolio__name span {
          font-size: 65px;
          line-height: 62px; } }
  .portfolio-wrapper p {
    padding: 0 10%;
    line-height: 25px;
    font-style: italic;
    color: #777; }
    @media (max-width: 620px) {
      .portfolio-wrapper p {
        font-size: 15px;
        line-height: 20px; } }
  @media (max-width: 992px) {
    .portfolio-wrapper {
      margin-bottom: 20px; } }
  @media (max-width: 620px) {
    .portfolio-wrapper {
      width: 250px; } }

.about-me__text {
  width: 44%;
  margin-right: 80px;
  text-align: center; }
  .about-me__text .universal-h2 {
    color: #fff;
    padding-bottom: 20px;
    margin-bottom: 25px; }
  .about-me__text p {
    margin-bottom: 35px;
    line-height: 24px;
    color: #c18f59; }
    .about-me__text p span {
      font-size: 48px;
      color: #fff; }
    @media (max-width: 620px) {
      .about-me__text p {
        margin-bottom: 20px;
        font-size: 14px;
        line-height: 19px; } }
  .about-me__text h4 {
    margin-bottom: 7px;
    font-size: 25px;
    color: #c18f59; }
  .about-me__text .p-white {
    margin-bottom: 0;
    color: #fff; }
  @media (max-width: 1250px) {
    .about-me__text {
      width: 48%;
      margin-right: 40px; } }
  @media (max-width: 992px) {
    .about-me__text {
      width: 100%;
      margin-right: 0; } }

.slick-slide:focus {
  outline: none; }

.fh5co-books {
  margin-bottom: 122px; }
  .fh5co-books .universal-h2 {
    margin-bottom: 50px;
    padding-bottom: 20px; }
  .fh5co-books .books-brand-button {
    text-align: center; }
/* ... */

